src/objects/CompanyProductDetails__c.object
<CustomObject>
    <description>Stores company products info</description>
    <fields>
        <fullName>Product_Id__c</fullName>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDeleted</label>
        <type>Checkbox</type>
    </fields>
    <label>CompanyProductDetails</label>
    <nameField>
        <label>CompanyProductDetails Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CompanyProductDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>